deployConfig/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: home-cms
  labels:
    app: cms
    component: backend
  name: home-cms-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cms
      component: backend
  template:
    metadata:
      labels:
        app: cms
        component: backend
    spec:
      containers:
        - image: 192.168.11.3:10000/ci/home-cms:backend.master.bd18140.200202.12
          name: home-cms-backend
          imagePullPolicy: Always
          ports:
          - containerPort: 80
            name: port
            protocol: TCP
      imagePullSecrets:
      - name: registry-secret
