deployConfig/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: home-cms-backend-ingress
  namespace: home-cms
spec:
  rules:
    - host: cmsback.home
      http:
        paths:
          - backend:
              serviceName: cms-backend-svc
              servicePort: 80
            path: /
